# ZSTU_TEC-2

./: Cargo.toml  LICENSE  README.md  tec-2.py
.github/workflows/: build.yml
crate/custom_macro/: Cargo.toml
crate/tec-2/: Cargo.toml
crate/tec-2/src/: grammar.lalrpop  lib.rs  main.rs
crate/tec-2/src/ast/: mod.rs
crate/tec-2/src/parser/: mod.rs
crate/tec-2/src/parser/instrument/: dc.rs  mi.rs  mod.rs
crate/tec-2/tests/: parser.rs
crate/tec2-client/: Cargo.toml
crate/tec2-client/src/: lib.rs  main.rs
crate/tec2-client/src/app/: app.rs  mod.rs  router.rs
crate/tec2-client/src/ui/: main.rs  mod.rs  parser.rs
crate/tec2-macro/: Cargo.toml
crate/tec2-parser/: Cargo.toml
crate/tec2-parser/src/: custom_macro.rs  error.rs  grammar.lalrpop  lib.rs
crate/tec2-parser/src/ast/: ast.rs  expr.rs  token.rs
crate/tec2-parser/src/parser/: parser.rs
crate/tec2-parser/src/parser/instrument/: ci.rs  instrument.rs  ir.rs  mem.rs  sci.rs  sst.rs
crate/tec2-parser/tests/: parser.rs
